--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- Header Section -->
-    <div id="section1">
+    <section id="section1">
         <div class="container">
             <!-- Header Section -->
             <header>
@@ -241,7 +241,7 @@
             </div>
         </div>
 
-    </div>
+    </section>
 
     <!-- Main Content Section -->
     <main>
@@ -588,59 +588,12 @@
         </div>
 
     </footer>
-
-    <!-- Link to external JavaScript files -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script src="./assets/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script defer src="./assets/script.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('.carousel > .row').slick({
-                slidesToShow: 2,
-                slidesToScroll: 1,
-                rows: 2,
-                prevArrow: "<img class='a-left control-c prev slick-prev' src='./assets/images/Button.png'>",
-                nextArrow: "<img class='a-right control-c next slick-next' src='./assets/images/Button (1).png'>",
-                responsive: [
-                    {
-                        breakpoint: 768,
-                        settings: {
-                            slidesToShow: 2
-                        }
-                    },
-                    {
-                        breakpoint: 480,
-                        settings: {
-                            slidesToShow: 2
-                        }
-                    }
-                ],
-            })
-
-            $('.carousel2 > .row').slick({
-                slidesToShow: 3,
-                slidesToScroll: 1,
-                prevArrow: "<img class='a-left control-c prev slick-prev' src='./assets/images/Button.png'>",
-                nextArrow: "<img class='a-right control-c next slick-next' src='./assets/images/Button (1).png'>",
-                responsive: [
-                    {
-                        breakpoint: 992,
-                        settings: {
-                            slidesToShow: 2
-                        }
-                    },
-                    {
-                        breakpoint: 480,
-                        settings: {
-                            slidesToShow: 1
-                        }
-                    }
-                ],
-            })
-        });
-    </script>
 </body>
+<!-- Link to external JavaScript files -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+<script src="./assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script defer src="./assets/script.js"></script>
+
 
 </html>
